--- a/ddd-seesee/ss-member/ss-member-infrastructure/pom.xml
+++ b/ddd-seesee/ss-member/ss-member-infrastructure/pom.xml
@@ -114,5 +114,15 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
