--- a/ddd-seesee/ss-member/ss-member-interaction/pom.xml
+++ b/ddd-seesee/ss-member/ss-member-interaction/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>ss-member-application</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <!-- swagger3文档 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
