--- a/ddd-seesee/ss-member/ss-member-start/src/main/resources/application.yml
+++ b/ddd-seesee/ss-member/ss-member-start/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://aliyun.whoiszxl.com/zzshop?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://aliyun.whoiszxl.com/seesee?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
 
