--- a/ddd-seesee/ss-member/ss-member-infrastructure/pom.xml
+++ b/ddd-seesee/ss-member/ss-member-infrastructure/pom.xml
@@ -124,5 +124,10 @@
             <artifactId>rocketmq-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
