--- a/ddd-seesee/ss-video/ss-video-start/pom.xml
+++ b/ddd-seesee/ss-video/ss-video-start/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ss-member</artifactId>
+        <artifactId>ss-video</artifactId>
         <groupId>com.whoiszxl</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ss-member-start</artifactId>
+    <artifactId>ss-video-start</artifactId>
+
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -25,7 +26,7 @@
 
         <dependency>
             <groupId>com.whoiszxl</groupId>
-            <artifactId>ss-member-interaction</artifactId>
+            <artifactId>ss-video-interaction</artifactId>
             <version>1.0.0</version>
         </dependency>
     </dependencies>
