--- a/ddd-seesee/ss-video/ss-video-start/src/main/resources/application.yml
+++ b/ddd-seesee/ss-video/ss-video-start/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 
 server:
-  port: 10001
+  port: 10002
 
 spring:
   application:
-    name: ss-member
+    name: ss-video
   cloud:
     nacos:
       server-addr: aliyun.whoiszxl.com:8848
@@ -36,7 +36,7 @@ spring:
 seesee:
   swagger2:
     enabled: true
-    title: member-在线接口文档
+    title: video-在线接口文档
     base-package: com.whoiszxl.controller
   log:
     enabled: true
