--- a/ddd-seesee/ss-member/ss-member-application/pom.xml
+++ b/ddd-seesee/ss-member/ss-member-application/pom.xml
@@ -34,5 +34,11 @@
             <artifactId>ss-member-domain</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.whoiszxl</groupId>
+            <artifactId>ss-member-rpc</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
