--- a/ddd-seesee/ss-video/ss-video-infrastructure/pom.xml
+++ b/ddd-seesee/ss-video/ss-video-infrastructure/pom.xml
@@ -128,6 +128,18 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.whoiszxl</groupId>
+            <artifactId>ss-member-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.whoiszxl</groupId>
+            <artifactId>ss-member-rpc</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
