--- a/flutter_seesee/pubspec.yaml
+++ b/flutter_seesee/pubspec.yaml
@@ -64,7 +64,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
 
   # fonts:
   #   - family: Schyler
