--- a/flutter_seesee/pubspec.yaml
+++ b/flutter_seesee/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/lottie/
 
   # fonts:
   #   - family: Schyler
